<resources>
    <string name="app_name">Dont Forget To Sear</string>

    <string name="format_ingredient" formatted="false">"%1$s"</string>
    <string name="format_ingredient_amount" formatted="false">" - (%1$s)"</string>
    <string name="format_step" formatted="false">"   %1$d. %2$s"</string>
    <string name="format_recipe_category" formatted="false">"(%1$s) Serves %2$s."</string>
    <string name="format_empty_adapter" formatted="false">"No %1$s"</string>

    <string name="filler">Filler Text. Ipsum Lorum.</string>

    <string name="prompt_typeofrecipe">Type of Recipe</string>

    <string name="title_pinned">Pinned</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_shoppingList">Shopping List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipe_name">Recipe Name</string>
    <string name="alert_servings_prompt">How many does it serve?</string>
    <string name="content_description_recipePicture">The image of the recipe.</string>
    <string name="settings">Settings</string>
    <string name="add_all_to_groceries">Add All to Groceries</string>
    <string name="pin">Pin</string>
    <string name="change_recipe_picture">Change recipe picture</string>
    <string name="ingredients">Ingredients</string>
    <string name="content_description_add_direction">Button to add direction to recipe</string>
    <string name="content_description_add_ingredient">Button to add ignredient to recipe</string>
    <string name="content_description_button_to_edit_ingredient">Button to edit ingredient</string>
    <string name="content_description_recipe_icon">Recipe icon, displayed in list of recipes</string>
    <string name="add_to_recipe">Add To Recipe</string>
    <string name="ellipsis">…</string>
    <string name="no_items">No items</string>
    <string name="enter_directions_here">prompt_enter_directions_here</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="directions">Directions</string>
    <string name="remove_all_groceries">Remove all groceries</string>
    <string name="remove_crossed_off_groceries">Remove crossed off groceries</string>
    <string name="tb_adding_recipe">Adding recipe…</string>
    <string name="tb_pinned_recipes_title">MY PINNED RECIPES</string>
    <string name="tb_my_recipes_title">MY RECIPES</string>
    <string name="tb_settings_tile">SETTINGS</string>
    <string name="tb_shopping_list_title">MY SHOPPING LIST</string>
</resources>
